		of malloc/free and manual delete. (mmap/munmap are, for natural
		reasons, used though by the RAMComponent.)
		Separating out the dyntrans specific parts of CPUComponent into
		another base class, CPUDyntransComponent, so that it in theory
		is possible to implement non-dyntrans CPUs.
		Partial support for choosing MIPS ABI (affects disassembly and
		register dumps, mostly).
20090810	Beginning on variable write handlers: MIPS zr register is
		read-only, MIPS' model can now be changed correctly, and
		root.accuracy can only be assigned "cycle" or "sloppy".
20090814	Continuing on write handlers for variables (root.step),
		beginning on component tree snapshotting (using Clone). The
		backward-step command now works reasonably well (but the only
		snapshot taken so far is at step=0).
20090815	Reimplementing the M88K br, or_imm, or.u_imm, cmp, cmp_imm,
		and_imm, and.u_imm, mask_imm, mask.u_imm, mak, mak_imm,
		mulu_imm, xor_imm, and xor.u_imm instructions.
20090819	Base OTHERLIBS in configure on LDFLAGS.
20090821	Updating the TODO with thoughts/plans for the "plugin" part
		of the new framework.
20090822	Beginning on a doc/framework.html, describing the new
		framework concepts to end-users.
20090905	Continuing on the dyntrans core: page allocation.
20091207	The dev_ether MAC address can now be read.
20091212	Updating the OpenBSD/landisk install instructions in
		guestoses.html from OpenBSD 4.5 to 4.6.
20091219	Include _GLIBCXX_DEBUG and _GLIBCXX_DEBUG_PEDANTIC defines in
		debug builds, to potentially catch some STL misuses.
		If valgrind is found by the configure script, it is used when
		running 'make test'. If there is any output from valgrind -q
		(i.e. errors), then make test fails.
20100127	Patch from Tassilo Philipp to enable PPC's fabs instruction.
		Patch from Yana to use return value from net_ethernet_rx()
		correctly in dev_ether.c.
20100128	Adding a check (for "make test") to see that delete isn't
		used. Only a few exceptions are allowed.